Scrolling fix on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -55,7 +55,9 @@ h1 { font-size: 30px; display: none; }
   h1 { font-size: 26px;  display: none; }
 }
 
-section { margin-top: 100px; scroll-margin-top: 90px; }
+section { margin-top: 100px; scroll-margin-top: 90px; 
+  @media screen and (max-width: 440px) { scroll-margin-top: 130px; }
+}
 
 button { outline: none; }
 
